fixed some bugs in hyperlink and reflectutils
git-svn-id: http://warp-core.googlecode.com/svn/trunk@122 e7d256a5-fc2b-0410-8b46-a5493d102834